[build-system]
requires = [ "setuptools!=61.*,>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "repo_helper_bot"
version = "0.0.0"
description = "I keep your repository configuration up-to-date using 'repo_helper'."
readme = "README.rst"
requires-python = ">=3.6.1"
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = [ "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/repo_helper_bot"
"Issue Tracker" = "https://github.com/repo-helper/repo_helper_bot/issues"
"Source Code" = "https://github.com/repo-helper/repo_helper_bot"

[tool.importcheck]

[tool.whey]
base-classifiers = []
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
plugins = [ "sqlmypy", "flasksqlamypy",]
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "Windows", "macOS", "Linux",]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
