[build-system]
requires = [ "setuptools!=61.*,<=67.1.0,>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "repo-helper-bot"
version = "0.0.0"
description = "I keep your repository configuration up-to-date using 'repo_helper'."
readme = "README.rst"
requires-python = ">=3.8"
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = [ "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/repo-helper/repo-helper-bot"
"Issue Tracker" = "https://github.com/repo-helper/repo-helper-bot/issues"
"Source Code" = "https://github.com/repo-helper/repo-helper-bot"

[tool.importcheck]
always = [
    "repo_helper_bot",
    "repo_helper_bot.constants",
    "repo_helper_bot.hooks",
    "repo_helper_bot.routes",
    "repo_helper_bot.updater",
    "repo_helper_bot.utils",
]

[tool.whey]
base-classifiers = []
python-versions = [ "3.8", "3.9", "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "repo_helper_bot"

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
plugins = [ "sqlmypy",]
show_error_codes = true
incremental = false

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "Windows", "macOS", "Linux",]

[tool.dep_checker]
allowed_unused = [ "werkzeug", "gunicorn", "psycopg2", "psycopg2_binary",]

[tool.dep_checker.name_mapping]
github3_py = "github3"

[tool.dependency-dash."requirements.txt"]
order = 10
